# opencv-yolo-darknet-course

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: Configurando-Ambiente.md  YOLO-Papers.md
shared/: README.md
shared/img/: README.md
src/ann/: CMakeLists.txt  README.md  activations.hpp  helpers.hpp  operador-and.cpp  perceptron.cpp  questao01.cpp  questao02.cpp  questao03.cpp  questao04.cpp
src/helpers/: colors.json  darknet.py  labels.json  media.py  models.py  opencv.py  settings.py  yolo.py
src/implementacoes-redes-neurais/: CMakeLists.txt  README.md  activations.hpp  questao01.cpp  questao02.cpp  questao04.cpp
src/notebooks/: YOLO v4 - Criando um dataset.ipynb  YOLO v4 - Deteccao de objetos com Darknet.ipynb  YOLO v4 - Deteccao de objetos com OpenCV - Explorando Mais.ipynb  YOLO v4 - Deteccao de objetos com OpenCV.ipynb  YOLOv4-Criando-um-dataset.ipynb  YOLOv8-Deteccao-de-objetos.ipynb  YOLOv8-Treinamento-de-um-modelo-customizado.ipynb  utils.py
src/scripts/: traduzir_labels.py
