[project]
name = "opencv-yolo-darknet"
version = "0.1.0"
description = ""
authors = [{ name = "Raphael Ramos", email = "raphael.opensource@gmail.com" }]
readme = "README.md"
requires-python = "~3.10"
dependencies = ["ipykernel (>=6.30.1,<7.0.0)", "opencv-python (>=4.12.0.88,<5.0.0.0)", "matplotlib (>=3.10.6,<4.0.0)", "tensorflow[and-cuda] (>=2.20.0,<3.0.0)", "ultralytics (>=8.3.241,<9.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
